[gd_scene load_steps=6 format=2]

[ext_resource path="res://src/Password/Password.gd" type="Script" id=1]
[ext_resource path="res://src/terminal/TerminalTheme.tres" type="Theme" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.419608, 0.803922, 0.760784, 1 )

[sub_resource type="StyleBoxEmpty" id=2]

[sub_resource type="StyleBoxFlat" id=3]
bg_color = Color( 0.419608, 0.803922, 0.760784, 1 )

[node name="Password" type="Control"]
margin_left = 15.4667
margin_top = 1.74036
margin_right = 15.4667
margin_bottom = 1.74036
theme = ExtResource( 4 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
solution = "yes"

[node name="Header" type="Panel" parent="."]
margin_right = 600.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSplitContainer" type="HSplitContainer" parent="Header"]
anchor_top = -0.0294118
anchor_bottom = -0.0294118
margin_left = 10.0
margin_right = 590.0
margin_bottom = 41.1765
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelHead" type="Label" parent="Header/HSplitContainer"]
margin_top = 5.0
margin_right = 144.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0.535156, 0.535156, 0.535156, 1 )
text = "UNIX::user()"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LabelHead2" type="Label" parent="Header/HSplitContainer"]
margin_left = 156.0
margin_top = 5.0
margin_right = 580.0
margin_bottom = 35.0
custom_colors/font_color = Color( 0.533333, 0.533333, 0.533333, 1 )
text = "12/11/10 05:22"
align = 2
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Body" type="Panel" parent="."]
margin_top = 40.0
margin_right = 600.0
margin_bottom = 290.0
rect_pivot_offset = Vector2( 144, 144 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Carot" type="Label" parent="Body"]
margin_left = 15.0
margin_top = 58.4033
margin_right = 55.0
margin_bottom = 88.4033
text = ">"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="Body"]
margin_left = 35.3544
margin_top = 50.7479
margin_right = 189.354
margin_bottom = 90.7479
theme = ExtResource( 4 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = SubResource( 3 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Body"]
margin_left = 35.8345
margin_top = 25.0273
margin_right = 75.8345
margin_bottom = 55.0273
text = "Enter password"

[node name="Timer" type="Timer" parent="."]
autostart = true
[connection signal="text_entered" from="Body/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
